style.css
/* ... */
.thumbnails .thumbnail-container .thumbnail-info {
    margin: 8% 0 8% 3%;
    color: #5F5F5F;
}
.thumbnails .thumbnail-container .thumbnail-info h1 {
    padding-bottom: 10px;
}
.thumbnails .thumbnail-container .thumbnail-info p {
    font-size: 12px;
    font-weight: 100;
}
.thumbnails button {
    display: block;
    width: 60%;
    height: 40px;
    margin: 0 auto;
    background-color: #FAFAFA;
    border: 1px solid #E6E6E6;
    cursor: pointer;
}

@media (min-width: 1000px) {
    .thumbnails {
        display: flex;
        justify-content: flex-start;
        align-items: center;
        flex-wrap: wrap;
        padding-top: 10%;
    }
    .thumbnails a {
        width: 45%;
        margin: 0 2.5%;
    }
    .thumbnails .thumbnail-container {
        width: 100%;
        height: auto;
    }
}
html {
    font-family: source-han-sans-japanese, sans-serif;
    font-size: 14px;
    line-height: 1.2;
    font-weight: 400;
    -webkit-font-smoothing: subpixel-antialiased;
    font-variant-ligatures: common-ligatures;
    color: #5F5F5F;
}

@media (min-width: 1000px) {
    html {
        font-size: 21px;
    }
}
/*about part*/
.intro {
    margin: 15% 0;
}
.intro .intro-icon {
    position: relative;
    text-align: center;
}
.intro .intro-icon img {
    display: inline-block;
    width: 10%;
    height: auto;
}
.intro .intro-icon::before {
    content: "";
    display: block;
    width: 40%;
    height: 2px;
    border-top: 2px solid #B4061F;
    border-bottom: 2px solid #B4061F;
    position: absolute;
    padding-top: 10px;
    top: 10px;
    left: 0;
}
.intro .intro-icon::after {
    content: "";
    display: block;
    width: 40%;
    height: 2px;
    border-top: 2px solid #B4061F;
    border-bottom: 2px solid #B4061F;
    position: absolute;
    padding-top: 10px;
    top: 10px;
    right: 0;
}
.intro .intro-flex {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    margin: 50px 0;
}
.intro .intro-flex img {
    width: 20%;
    height: 100px;
    object-fit: cover;
    object-position: 0 20%;
    border: none;
}
.intro .intro-flex p {
    display: inline-block;
    width: 70%;
    font-size: 0.8rem;
    font-weight: 200;
    line-height: 1.5;
    margin-left: 5%;
}

@media (min-width: 1000px) {
    .intro .intro-icon img {
        width: 5%;
    }
    .intro .intro-flex img {
        width: 10%;
    }
}
html {
    font-family: source-han-sans-japanese, sans-serif;
    font-size: 14px;
    line-height: 1.2;
    font-weight: 400;
    -webkit-font-smoothing: subpixel-antialiased;
    font-variant-ligatures: common-ligatures;
    color: #5F5F5F;
}

@media (min-width: 1000px) {
    html {
        font-size: 21px;
    }
}
.header__sub {
    width: 100%;
}
.header__sub-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 30px;
    padding: 0 5%;
    background-color: #B4061F;
}
.header__sub-nav-logo {
    display: inline;
    width: 10%;
}
.header__sub-nav-logo img {
    width: 100%;
}

.menu-sub-menu-container {
    width: 90%;
}
.header__sub-nav-menus {
    display: flex;
    justify-content: flex-end;
    align-content: center;
    width: 100%;
}
.header__sub-nav-menus li {
    margin-left: 10%;
}
.header__sub-nav-menus a {
    color: #FFFFFF;
    font-weight: 300;
}

@media (min-width: 1000px) {
    .header__sub-nav {
        height: 80px;
    }
}
html {
    font-family: source-han-sans-japanese, sans-serif;
    font-size: 14px;
    line-height: 1.2;
    font-weight: 400;
    -webkit-font-smoothing: subpixel-antialiased;
    font-variant-ligatures: common-ligatures;
    color: #5F5F5F;
}

@media (min-width: 1000px) {
    html {
        font-size: 21px;
    }
}

/*article page*/
.article {
    width: 90%;
    margin: 20% auto;
}

.article__img--top img {
    width: 100%;
    height: auto;
    object-fit: cover;
}
.article .article__header {
    margin: 5% 0 10%;
}
.article .article__header h1 {
    padding-bottom: 10px;
}
.article .article__header--flex {
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
}
.article .article__header--flex .article-date {
    font-size: -1rem;
    font-weight: 100;
}
.article .article__header--flex .category-icon {
    width: 32px;
    height: 32px;
    margin-left: 2%;
    object-fit: cover;
}
.article .article__header--flex .category-icon .canada-food {
    background: url("images/canada.png") no-repeat top left;
    height: 100%;
}
.article .article__header--flex .category-icon .japan-food {
    background: url("images/japan.png") no-repeat;
    height: 100%;
}
.article .article__header--flex .category-icon .world-food {
    background: url("images/world.png") no-repeat;
    height: 100%;
}
.article .article__header--flex .post-categories {
    margin-left: 10px;
}
.article .article__header--flex .post-categories a {
    color: #5f5f5f;
    font-size: 0.8rem;
}
.article .article__main p.article-sentence {
    font-size: 300;
    line-height: 2;
}
.article__tags {
    margin-top: 10%;
}
.article__tags p {
    font-weight: lighter;
    display: flex;
    align-items: center;
}
.article__tags #text {
    color: pink;
}
.article__tags a {
    color: #5F5F5F;
    padding: 0 2%;
}
.article .article__footer {
    margin: 20% 0;
    border-top: 1px solid #E6E6E6;
    padding-top: 5%;
    position: relative;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.article .article__footer--prev img {
    width: 10%;
    margin-right: 5%;
}
.article .article__footer--next {
    margin-left: auto;
}

.article .article__footer--next img {
    width: 10%;
    margin-left: 5%;
}
.article .article__footer a {
    color: #5F5F5F;
}

@media (min-width: 1000px) {
    .article__img--top img {
        width: 870px;
        height: 520px;
        object-fit: cover;
    }
}

.category {
    margin: 20% auto;
    padding: 10%;
    text-align: left;
}
.category a {
    color: #5F5F5F;
}
/* ... */

